--- a/style.css
+++ b/style.css
@@ -112,9 +112,9 @@ header{
     animation: moveBanner 1s 0.5s forwards;
   
 }
-.banner h2{
+.banner h2 a{
     font-family:'Fontep', serif;
-    color: #ff3366;
+    color: #ece4e6;
     font-size: 2rem;
     text-shadow: .2rem .2rem rgba(0,0,0,0.4);
     margin-bottom: 2rem;
@@ -271,7 +271,11 @@ header{
     width: 100%;
 }
 
-
+.container{
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+}
 
 .sessao-contato{
     width: 100%;
