--- a/style.css
+++ b/style.css
@@ -277,38 +277,31 @@ header{
     background-size: cover;
 }
 
-.sessao-contato{
+.sessao-form{
     width: 100%;
     height: 100vh;
-    background-color: #272727;
-    display: flex;
+    background-color: rgb(4, 2, 27);
     align-items: center;
     justify-content: center;
-}
-.contato-wrapper{
-    width: 60%;
-    height: 40rem;
     display: flex;
-    box-shadow: 0 2rem 3rem rgba(0,0,0,0.5);
 }
-.contato-left{
-    width: 35%;
-    background: linear-gradient(rgba(15,15,15, 0.6),rgba(22,22,22, 0.9)), url("./Images/envelopes.jpg");
-    background-size: cover;
-}
-.contato-right{
-    width: 65%;
+.form-container{
+    width: 50%;
+    height: 80%;
     background-color: #eee;
-    padding: 1rem 3rem 3rem;
+    align-items: center;
+    justify-content: center;
+    display: block;
+    border-radius: .5rem;
 }
-.sessao-contato h1{
-    font-family: 'FonteButton', serif;
-    font-size: 3rem;
-    font-weight: lighter;
-    width: 100%;
-    text-align: center;    
+.form-container h2{
+    font-family: 'Fonteh1', serif;
+    font-size: 2.5rem;
+    text-align: center;
+    height: 10%;
+    margin-bottom: 1rem;
 }
-.sessao-contato form{
+.form-container form{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -322,37 +315,39 @@ header{
     border: none;
     width: 20rem;
     font-size: 1.5rem;
-    font-family: 'Fontep', serif;
+    font-family:'Fontep', serif;
     border-bottom: 2px dashed #636363;
     height: 3rem;
     outline: none;
     margin: 1rem 0;
 }
 .input-group textarea{
-    padding-top: 1.5rem;
+    padding-top: 1rem;
     max-width: 25rem;
-    max-height: 3;
+    max-height: 3rem;
 }
+
 .field-label{
     position: absolute;
     left: 0;
-    top: 0;
+    top: 2rem;
     font-size: 1.2rem;
-    font-family: 'Fontep', serif;
+    font-family:'Fontep', serif;
     text-transform: uppercase;
     transition: all 0.3s;
 }
 .field:focus ~ label{
+    top: 0;
     font-size: 1rem;
 }
-.field:focus {
-    border-bottom: 1px solid #636363;
+.field:focus{
+    border-bottom: solid 1px;
 }
 .btn-ctt{
     font-family: 'FonteButton', serif;
-    background: #3E5151;
-    background: -webkit-linear-gradient(to right, #DECBA4, #3E5151);
-    background: linear-gradient(to right, #DECBA4, #3E5151);
+    background: #b92b27;
+    background: -webkit-linear-gradient(to right, #1565C0, #b92b27);
+    background: linear-gradient(to right, #1565C0, #b92b27);
     width: 8rem;
     height: 2.5rem;
     font-size: 1rem;
@@ -360,40 +355,36 @@ header{
     border-radius: .5rem;
     box-shadow: 0 .1rem .8rem rgba(0, 0, 0, .4);
     border: none;
-    float: left;  
-    cursor: pointer;
 }
 .btn-ctt:hover{
-    background: #bdc3c7;
-    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);
-    background: linear-gradient(to right, #2c3e50, #bdc3c7);
-}
-.btn-res{
-    font-family: 'FonteButton', serif;
-    background: #5433FF;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #A5FECB, #20BDFF, #5433FF);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #A5FECB, #20BDFF, #5433FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
-    width: 8rem;
-    height: 2.5rem;
-    font-size: 1rem;
-    color: #eee;
-    border-radius: .5rem;
-    box-shadow: 0 .1rem .8rem rgba(0, 0, 0, .4);
-    border: none;
-    float: left;  
-    cursor: pointer;
-}
-.btn-res:hover{
     background: #12c2e9;
     background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
     background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
 }
+.btn-res{
+    font-family: 'FonteButton', serif;
+    background: #f12711;
+    background: -webkit-linear-gradient(to right, #f5af19, #f12711);
+    background: linear-gradient(to right, #f5af19, #f12711);
+    width: 8rem;
+    height: 2.5rem;
+    font-size: 1rem;
+    color: #eee;
+    border-radius: .5rem;
+    box-shadow: 0 .1rem .8rem rgba(0, 0, 0, .4);
+    border: none;
+}
+.btn-res:hover{
+    background: #093028;
+    background: -webkit-linear-gradient(to right, #237A57, #093028);
+    background: linear-gradient(to right, #237A57, #093028);
 
+}
 
 .sessao-projetos{
-    background: #c31432;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    background: #c31432;
+    background: -webkit-linear-gradient(to right, #240b36, #c31432);
+    background: linear-gradient(to right, #240b36, #c31432);    
 }
 .projetos{
     display: flex;
@@ -538,7 +529,7 @@ footer{
 }
 
 
-@media screen and (max-width:425px) {
+@media screen and (max-width:426px) {
     header{
         width: 100%;
         height: 100vh;
@@ -580,30 +571,50 @@ footer{
         font-size: 0.6rem;
         margin-top: 0.2rem;
     }
-    .sessao-carrossel h1{
+
+
+    .form-container h2{
         font-size: 2rem;
+        height: 10%;
+        margin-bottom: 1rem;
     }
-    .legenda{
-        font-size: 1.5rem;
+    .field{
+        width: 9rem;
+        font-size: .8rem;
+        height: 3rem;
+        margin: .5rem 0;
     }
-    .carrossel{
-        width: 70%;
-        height: 40%;
-    }
-    .sessao-contato h1{
-        font-size: 2rem;   
+    .input-group textarea{
+        padding-top: 1rem;
+        max-width: 9rem;
+        max-height: 3rem;
     }
     .field-label{
+        left: 0;
+        top: .7rem;
         font-size: 1rem;
     }
     .field:focus ~ label{
-        font-size: 0.8rem;
+        top: 0;
+        font-size: .7rem;
     }
-    .field{
-        width: 13rem;
-        font-size: 1.5rem;
-        height: 3rem;
+    .field:focus{
+        border-bottom: solid 1px;
     }
+    .btn-ctt{
+        margin-top: 5rem;
+        width: 4rem;
+        height: 1.5rem;
+        font-size: .7rem;
+    }
+   
+    .btn-res{
+        width: 4rem;
+        height: 1.5rem;
+        font-size: .7rem;
+    }
+   
+
     .projetos{
         display: block;
         justify-content: center;
@@ -645,7 +656,7 @@ footer{
         height: 40px;
     }
 }
-@media screen and (min-width: 426px) and (max-width: 767px){
+@media screen and (min-width: 427px) and (max-width: 768px){
     
     .banner h1{
         font-size: 1.7rem;
@@ -662,30 +673,19 @@ footer{
         font-size: 0.7rem;
         margin-top: 0.2rem;
     }
-    .carrossel{
-        width: 70%;
-        height: 40%;
+
+    .btn-ctt{
+        width: 4rem;
+        height: 1.5rem;
+        font-size: .7rem;
     }
-    .sessao-carrossel h1{
-        font-size: 2rem;
+   
+    .btn-res{
+        width: 4rem;
+        height: 1.5rem;
+        font-size: .7rem;
     }
-    .legenda{
-        font-size: 1.5rem;
-    }
-    .sessao-contato h1{
-        font-size: 2rem;   
-    }
-    .field-label{
-        font-size: 1rem;
-    }
-    .field:focus ~ label{
-        font-size: 0.7rem;
-    }
-    .field{
-        width: 15rem;
-        font-size: 1.5rem;
-        height: 3rem;
-    }
+
     .projetos{
         display: block;
         justify-content: center;
@@ -723,7 +723,7 @@ footer{
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px){
+@media screen and (min-width: 768px) and (max-width: 1069px){
     .sessao-header h1{
         font-size: 2.5rem;
     }
@@ -734,6 +734,17 @@ footer{
     .conhecimento-text{
         font-size: 0.8rem;
         margin-top: 0.2rem;
+    }
+    .btn-ctt{
+        width: 7rem;
+        height: 2rem;
+        font-size: 1rem;
+    }
+   
+    .btn-res{
+        width: 7rem;
+        height: 2rem;
+        font-size: 1rem;
     }
     .projetos{
         display: block;
